--- a/src/app/views/pages/dashboard/dashboard.component.html
+++ b/src/app/views/pages/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
     </button>
     <button type="button" class="btn btn-primary btn-icon-text mb-2 mb-md-0">
       <i class="btn-icon-prepend" data-feather="download-cloud" appFeatherIcon></i>
-      Download Report
+      Descargar Reporte
     </button>
   </div>
 </div>
