--- a/src/app/views/pages/auth/login/login.component.html
+++ b/src/app/views/pages/auth/login/login.component.html
@@ -1,43 +1,57 @@
-<div class="container">
-  <div class="row w-100 mx-0 auth-page">
-    <div class="col-md-8 col-xl-6 mx-auto">
-      <div class="card">
-        <div class="row">
-          <div class="col-md-4 pe-md-0">
-            <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://placehold.co/250x650)' }">
-  
+<div class="login-container">
+  <div class="login-card">
+    <div class="login-left">
+      <div class="brand-section">
+        <div class="logo">
+          <i data-feather="heart" appFeatherIcon class="logo-icon"></i>
+          <h1>Bodas<span>Planner</span></h1>
+        </div>
+        <p class="tagline">Tu espacio profesional para gestionar bodas perfectas</p>
+        <img src="https://images.pexels.com/photos/265722/pexels-photo-265722.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Boda" class="decorative-image">
+      </div>
+      <div class="decoration-circles">
+        <div class="circle circle-1"></div>
+        <div class="circle circle-2"></div>
+        <div class="circle circle-3"></div>
+      </div>
+    </div>
+    <div class="login-right">
+      <div class="login-form-wrapper">
+        <h2>Iniciar Sesión</h2>
+        <p class="welcome-text">Bienvenido de vuelta. Ingresa a tu cuenta.</p>
+        <form class="login-form">
+          <div class="form-group">
+            <label for="email">Correo Electrónico</label>
+            <div class="input-wrapper">
+              <i data-feather="mail" appFeatherIcon class="input-icon"></i>
+              <input type="email" class="form-control" id="email" placeholder="tu&#64;email.com" value="admin&#64;bodasplanner.com">
             </div>
           </div>
-          <div class="col-md-8 ps-md-0">
-            <div class="auth-form-wrapper px-4 py-5">
-              <a routerLink="." class="nobleui-logo d-block mb-2">Noble<span>UI</span></a>
-              <h5 class="text-secondary fw-normal mb-4">Welcome back! Log in to your account.</h5>
-              <form class="forms-sample">
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" value="admin@demo.com">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" autocomplete="current-password" placeholder="Password" value="12345678">
-                </div>
-                <div class="form-check mb-3">
-                  <input type="checkbox" class="form-check-input" id="authCheck">
-                  <label class="form-check-label" for="authCheck">
-                    Remember me
-                  </label>
-                </div>
-                <div>
-                  <button type="submit" class="btn btn-primary me-2 mb-2 mb-md-0" (click)="onLoggedin($event)">Login</button>
-                  <button type="button" class="btn btn-outline-primary btn-icon-text mb-2 mb-md-0">
-                    <i class="feather icon-twitter btn-icon-prepend"></i>
-                    Login with twitter
-                  </button>
-                </div>
-                <a routerLink="/auth/register" class="d-block mt-3 text-secondary">Not a user? Sign up</a>
-              </form>
+          <div class="form-group">
+            <label for="password">Contraseña</label>
+            <div class="input-wrapper">
+              <i data-feather="lock" appFeatherIcon class="input-icon"></i>
+              <input type="password" class="form-control" id="password" autocomplete="current-password" placeholder="••••••••" value="12345678">
             </div>
           </div>
+          <div class="form-options">
+            <div class="custom-checkbox">
+              <input type="checkbox" id="remember" class="checkbox-input">
+              <label for="remember" class="checkbox-label">
+                <span class="checkbox-box"></span>
+                <span class="checkbox-text">Recordarme</span>
+              </label>
+            </div>
+            <a href="#" class="forgot-link">¿Olvidaste tu contraseña?</a>
+          </div>
+          <button type="submit" class="btn-login" (click)="onLoggedin($event)">
+            <span>Iniciar Sesión</span>
+            <i data-feather="arrow-right" appFeatherIcon class="btn-icon"></i>
+          </button>
+        </form>
+        <div class="signup-link">
+          <span>¿No tienes cuenta?</span>
+          <a routerLink="/auth/register">Regístrate aquí</a>
         </div>
       </div>
     </div>
