--- a/src/app/views/pages/dashboard/dashboard.component.html
+++ b/src/app/views/pages/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
       Bienvenido a Bodas Planner
     </h4>
   </div>
-  <div class="d-flex align-items-center flex-wrap text-nowrap">
+  <div class="d-flex align-items-center flex-wrap">
     <div class="input-group w-200px me-2 mb-2 mb-md-0">
       <button class="btn btn-outline-primary btn-icon calendar" type="button" (click)="d.toggle()">
         <i data-feather="calendar" appFeatherIcon></i>
@@ -13,13 +13,19 @@
       <input class="form-control border-primary bg-transparent" placeholder="yyyy-mm-dd"
           name="dp" [(ngModel)]="currentDate" ngbDatepicker #d="ngbDatepicker">
     </div>
-    <button type="button" class="btn btn-outline-primary btn-icon-text me-2 mb-2 mb-md-0">
+    <button type="button" class="btn btn-outline-primary btn-icon-text me-2 mb-2 mb-md-0 d-none d-md-inline-flex">
       <i class="btn-icon-prepend" data-feather="printer" appFeatherIcon></i>
       Print
     </button>
-    <button type="button" class="btn btn-primary btn-icon-text mb-2 mb-md-0">
+    <button type="button" class="btn btn-outline-primary btn-icon me-2 mb-2 mb-md-0 d-inline-flex d-md-none">
+      <i data-feather="printer" appFeatherIcon></i>
+    </button>
+    <button type="button" class="btn btn-primary btn-icon-text mb-2 mb-md-0 d-none d-md-inline-flex">
       <i class="btn-icon-prepend" data-feather="download-cloud" appFeatherIcon></i>
       Descargar Reporte
+    </button>
+    <button type="button" class="btn btn-primary btn-icon mb-2 mb-md-0 d-inline-flex d-md-none">
+      <i data-feather="download-cloud" appFeatherIcon></i>
     </button>
   </div>
 </div>
