--- a/src/app/views/pages/auth/login/login.component.html
+++ b/src/app/views/pages/auth/login/login.component.html
@@ -6,7 +6,6 @@
           <i data-feather="heart" appFeatherIcon class="logo-icon"></i>
           <h1>Bodas<span>Planner</span></h1>
         </div>
-        <p class="tagline">Tu espacio profesional para gestionar bodas perfectas</p>
         <img src="https://images.pexels.com/photos/265722/pexels-photo-265722.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Boda" class="decorative-image">
       </div>
       <div class="decoration-circles">
@@ -18,13 +17,12 @@
     <div class="login-right">
       <div class="login-form-wrapper">
         <h2>Iniciar Sesión</h2>
-        <p class="welcome-text">Bienvenido de vuelta. Ingresa a tu cuenta.</p>
         <form class="login-form">
           <div class="form-group">
-            <label for="email">Correo Electrónico</label>
+            <label for="email">Email</label>
             <div class="input-wrapper">
               <i data-feather="mail" appFeatherIcon class="input-icon"></i>
-              <input type="email" class="form-control" id="email" placeholder="tu&#64;email.com" value="admin&#64;bodasplanner.com">
+              <input type="email" class="form-control" id="email" placeholder="admin&#64;bodasplanner.com" value="admin&#64;bodasplanner.com">
             </div>
           </div>
           <div class="form-group">
